imports/plugins/included/default-theme/client/styles/cart/checkout.less
.checkout {
  .flex();
}
.checkout-progress {}
.checkout-steps {
  .display(flex);
  .justify-content(space-between);
  width: 100%;
  @media screen and (max-width: @screen-xs-max) {
    .flex-direction(column);
  }
}
.checkout-steps .panel-default > .panel-heading,
.checkout-steps .panel-default .panel-heading {
  .display(flex);
  .align-items(center);
}

.checkout-steps-main {
  .flex(1 1 auto);
  max-width: 100%;
  .margin-right(3rem);
  @media screen and (max-width: @screen-xs-max) {
    .margin-right(0);
  }
}
.checkout-steps-side {
  .flex(1 0 auto);
  min-width: 300px;
  max-width: 30%;
  @media screen and (max-width: @screen-xs-max) {
    min-width: 100%;
    max-width: 100%;
  }
}
.cart-checkout-steps {
  .padding-left(5px);
  margin-top: 20px;
  .panel-title {
    .margin-left(25px);
  }
}
@media screen and (min-width: @screen-sm-min) {
  .cart-checkout-steps {
    .col-md-8 {
      .padding-right(15px);
    }
  }
}
@media screen and (min-width: @screen-lg-min) {
  .cart-checkout-steps {
    max-width: 1200px;
    margin: 0 auto;
  }
}
.checkout-step-pending {
  position: relative;
  > .panel-default {
    height: 300px;
    margin-bottom: 3rem;
    background-color: @black05;
  }
  > .panel-default .panel-heading,
  .panel-body {
    background-color: @black05;
    border: none;
  }
}
.checkout-step {
  position: relative;
  > .panel-default {
    margin-bottom: 3rem;
  }
}
.checkout-step-badge {
  .display(flex);
  .justify-content(center);
  .align-items(center);
  .flex(0 0 auto);
  width: 38px;
  height: 38px;
  .margin-right(20px);
  border-radius: 19px;
  background: @checkout-progress-next;
  color: @checkout-progress-next-text;
  font-size: 16px;
  font-weight: bold;
}
.checkout-step-badge.completed {
  background: @checkout-progress-visited;
  color: @checkout-progress-visited-text;
}
.checkout-step-badge.active {
  background: @checkout-progress-active;
  color: @checkout-progress-active-text;
}

// patch for payment autoform's mysteriously
// not getting the form-control class
.core-payment-method-form {
  padding-top: 5px;
  padding-bottom: 5px;
}
.core-payment-method-form label {
  font-weight: lighter;
}
.core-payment-method-form input[type=text] {
  .form-control;
}
.core-payment-method-form select {
  .form-control;
}

.order-completed {
  display: flex;
  .flex();
}

.order-completed h3 {
  color: #1c98d4;
  font-size: 48px;
  font-weight: bold;
  font-family: "Source Sans Pro";
}

.order-details-header {
  .flex(0 0 100%);
  //background: #00ff00; // TODO: Remove this line
}

.order-details-main {
  .flex(1 1 auto);
  max-width: 100%;
  .margin-right(3rem);
  @media screen and (max-width: @screen-xs-max) {
    .margin-right(0);
  }
    //background: #ff0000; // TODO: Remove this line
}

.order-details-side {
  .flex(1 0 auto);
  min-width: 300px;
  max-width: 30%;
  @media screen and (max-width: @screen-xs-max) {
    min-width: 100%;
    max-width: 100%;
  }
  //background: #ff00ff; // TODO: Remove this line
}

.order-details-info-box {
  width: 100%;
  height: auto;
  margin-bottom: 20px;
  border: solid 1px #ccc;
  padding: 10px;
  //background: #0000ff;  // TODO: Remove this line
}

.order-details-store-title {
  font-weight: bold;
}

.order-details-content-title {
  font-weight: bold;
}

.order-details-line {
  display: flex;
  margin: 10px 10px 10px 0;
}

.order-details-line-item {
  display: flex;
  flex: 30px;
  align-items: flex-start;
}

.order-details-title {
  display: flex;
  flex: 1 1 auto;
  margin-top: 10px;
}

.order-details-quantity {
  display: flex;
  flex: 1 1 auto;
  margin-top: 10px;
}

.order-details-price {
  display: flex;
  flex: 1 1 auto;
  font-weight: bold;
}

.order-details-media {
  .flex(0 0 auto);
  width: 40px;
  height: 40px;
  border: solid 1px #cccccc;
  margin: 5px;

  img {
    width: 100%;
  }
}

.order-summary-title {
  font-weight: bold;
}

.order-summary-total-title {
  font-weight: bold;
}

.order-summary-total-value {
  font-weight: bold;
}

.order-summary-value {
  font-weight: bold;
  flex: 1 1 auto;
}

